[package]
name = "subbub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
serde = "1.0.203"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
srtlib = "0.1.9"
once_cell = "1.19.0"
