[package]
name = "subbub"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive", "cargo"] }
srtlib = "0.1.9"
once_cell = "1.19.0"
scraper = "0.19.0"
simplelog = "0.12.2"
log = "0.4.21"
itertools = "0.13.0"
rayon = "1.10.0"
